Finished the first draft of the statistics pages. Includes real data from back-end. "Dragvägs"-costs included. Tweaked tests, dto and implementation of PropertySimpleDTO usages.